# registry-stack

./: .gitignore  .gitleaks.toml  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  clippy.toml  deny.toml
crates/registry-config-report/: Cargo.toml  README.md
crates/registry-config-report/schemas/: registry.config.diagnostic_report.v1.schema.json  registry.config.explanation.v1.schema.json  registryctl.validation.report.v1.schema.json
crates/registry-config-report/src/: lib.rs
crates/registry-config-report/tests/: report_contract.rs
crates/registry-language-server/: Cargo.toml  README.md
crates/registry-language-server/src/: index.rs  lib.rs  main.rs  server.rs
crates/registry-language-server/tests/: protocol.rs
crates/registry-manifest-core/: Cargo.toml  README.md
crates/registry-manifest-core/src/: lib.rs
crates/registry-manifest-core/tests/: cpsv_ap_contract.rs  metadata_core.rs  metadata_unknown_fields.rs
crates/registry-notary/: Cargo.toml  README.md
crates/registry-notary-client/: Cargo.toml  README.md
crates/registry-notary-client/src/: client.rs  error.rs  lib.rs  responses.rs  verifier.rs
crates/registry-notary-client/tests/: client_contract.rs  facade_contract.rs  standalone_e2e.rs  status_verifier_contract.rs  verifier_contract.rs
crates/registry-notary-server/: Cargo.toml  README.md
crates/registry-notary-server/benches/: json_bench.rs  sd_jwt_bench.rs
crates/registry-notary-server/src/: api.rs  authz_details.rs  cel_worker.rs  config_governed.rs  credential_status.rs  digest.rs  json_path.rs  lib.rs  machine_quota.rs  metrics.rs  openapi.rs  posture.rs  preauth_state.rs  problem.rs  relay_client.rs  relay_contract.rs  relay_contract_test_support.rs  replay.rs  request_context.rs  response_context.rs  runtime.rs  self_attestation_rate_limit.rs  standalone.rs  subject_access_rate_limit.rs
crates/registry-notary-server/tests/: bulk_read_many_test.rs  cel_worker.rs  concurrency_dag_test.rs  concurrency_http_test.rs  decentralized_cross_source_cel.rs  demo_config.rs  deployment_gates_test.rs  fhir_claim_profiles.rs  machine_quota_http_test.rs  memoization_panic_test.rs  memoization_test.rs  offline_fixture.rs  sd_jwt_vc_verifier_compat.rs  self_attestation_guard_test.rs  standalone_http.rs  subject_access_guard_test.rs  target_matching_contract_test.rs
crates/registry-notary-source-adapter-rhai/: Cargo.toml
crates/registry-notary-source-adapter-rhai/src/: counters.rs  harness.rs  path.rs  xw.rs
crates/registry-notary-source-adapter-rhai/tests/: depth_bounds.rs  output_validation.rs  policy_validation.rs  sandbox.rs  source_response.rs
crates/registry-notary-source-adapter-sidecar/: Cargo.toml  README.md
crates/registry-notary-source-adapter-sidecar/examples/: civil-http-json-sidecar.yaml  dhis2-health-sidecar.yaml
crates/registry-notary-source-adapter-sidecar/scripts/: smoke-http-flow-dhis2-sidecar.sh
crates/registry-notary-source-adapter-sidecar/src/: lib.rs  main.rs  sidecar.rs
crates/registry-notary-source-adapter-sidecar/tests/: config_unknown_fields.rs  governed_runtime_validation.rs  rhai_batch.rs  rhai_credential_union.rs  rhai_validation.rs
crates/registry-notary-worker-harness/: Cargo.toml
crates/registry-notary/src/: boot.rs  config_loader.rs  doctor.rs  env_file.rs  explain_config.rs  logging.rs  main.rs  serve.rs  test_support.rs
crates/registry-notary/tests/: config_apply_bundle_cli.rs  config_schema.rs  config_verify_bundle_cli.rs  doctor_cli.rs  state_cli.rs  version_cli.rs
crates/registry-platform-audit/: Cargo.toml  README.md
crates/registry-platform-audit/src/: lib.rs  pseudonym_keyring.rs
crates/registry-platform-audit/tests/: durable_phase_contract.rs
crates/registry-platform-authcommon/: Cargo.toml
crates/registry-platform-authcommon/src/: lib.rs
crates/registry-platform-cache/: Cargo.toml  README.md
crates/registry-platform-cache/src/: lib.rs
crates/registry-platform-canonical-json/: Cargo.toml  README.md
crates/registry-platform-canonical-json/src/: lib.rs
crates/registry-platform-config/: Cargo.toml  README.md
crates/registry-platform-config/src/: config_bundle.rs  lib.rs
crates/registry-platform-config/tests/: config_bundle_canonicalization.rs
crates/registry-platform-consent/: Cargo.toml  README.md
crates/registry-platform-consent/src/: lib.rs
crates/registry-platform-consent/tests/: consent.rs
crates/registry-platform-crypto/: Cargo.toml  README.md
crates/registry-platform-httpsec/: Cargo.toml
crates/registry-platform-httputil/: Cargo.toml  README.md
crates/registry-platform-oid4vci/: Cargo.toml  README.md
crates/registry-platform-oidc/: Cargo.toml
crates/registry-platform-ops/: Cargo.toml  README.md
crates/registry-platform-testing/: Cargo.toml  README.md
crates/registry-relay/: .gitignore  .gitleaks.toml  .gitleaksignore  .mise.toml  .semgrep.yml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.demo  IMPLEMENTATION_PLAN.md  README.md  SECURITY.md  STANDARDS_ASSUMPTIONS.md  deny.toml  justfile
crates/registryctl/: CHANGELOG.md  Cargo.toml  README.md  install.sh
crates/registryctl/src/: lib.rs  (+4 more)
imports/registry-manifest/: CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  SECURITY.md  deny.toml
imports/registry-notary/: .dockerignore  .gitignore  .gitleaks.toml  .semgrep.yml  AGENTS.md  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  Dockerfile.openfn-sidecar  Dockerfile.source-adapter-sidecar  LICENSE  OPENFN_BATCH_MATCHING_PLAN.md  README.md  SECURITY.md  deny.toml  justfile
imports/registry-platform/: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml
imports/registry-registryctl/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
imports/registry-relay/: .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.demo  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SECURITY.md  STANDARDS_ASSUMPTIONS.md  clippy.toml  deny.toml  justfile  rustfmt.toml
(+3392 files in other folders)
