[package]
name = "registry-config-report"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
jsonschema = { version = "0.46.5", default-features = false }
