[package]
name = "registry-manifest-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["registry", "metadata", "manifest", "dcat", "shacl"]
categories = ["data-structures", "encoding", "parser-implementations"]
publish = false

[lints]
workspace = true

[dependencies]
oxiri = { version = "0.2.11" }
registry-platform-canonical-json.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
sha2 = { workspace = true }
thiserror = { version = "2" }

[dev-dependencies]
oxjsonld = { version = "0.2.5" }
serde_yaml_ng = { workspace = true }
