[package]
name = "registry-notary-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone Registry Notary routes, runtime, auth, audit, and HTTP source connectors."
readme = "README.md"
repository.workspace = true
publish = false

# not opted into [workspace.lints]: unsafe std::env::set_var/remove_var in
# #[cfg(test)] code (src/standalone.rs, tests/)

[features]
default = []
registry-notary-cel = ["dep:crosswalk-core", "dep:registry-notary-worker-harness"]
cel-worker-fixture = ["registry-notary-cel"]
pkcs11 = ["dep:cryptoki", "dep:hex"]

[dependencies]
registry-notary-core.workspace = true
registry-platform-audit.workspace = true
registry-platform-authcommon.workspace = true
registry-platform-cache = { workspace = true, features = ["redis"] }
registry-platform-config.workspace = true
registry-platform-crypto.workspace = true
registry-platform-httpsec.workspace = true
registry-platform-httputil.workspace = true
registry-platform-oid4vci.workspace = true
registry-platform-oidc.workspace = true
registry-platform-ops.workspace = true
registry-platform-pdp.workspace = true
registry-platform-replay = { workspace = true, features = ["redis"] }
registry-platform-sdjwt.workspace = true
axum.workspace = true
async-trait.workspace = true
base64.workspace = true
crosswalk-core = { workspace = true, optional = true }
registry-notary-worker-harness = { workspace = true, optional = true }
cryptoki = { workspace = true, optional = true }
getrandom.workspace = true
hex = { workspace = true, optional = true }
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
ulid.workspace = true
utoipa.workspace = true
zeroize.workspace = true

[dev-dependencies]
aws-lc-rs = { version = "1" }
axum-test = { version = "20" }
chrono = { version = "0.4" }
registry-notary-client = { workspace = true, features = ["verifier"] }
registry-platform-testing = { workspace = true, features = ["test-utils"] }
registry-notary-source-adapter-sidecar = { workspace = true }
jsonschema.workspace = true
tempfile = { version = "3" }
tough = { version = "0.23.0" }
wiremock = { version = "0.6" }
# Criterion drives the microbenchmarks under `benches/`. The benches are
# manually invoked via `cargo bench`; CI smoke-checks `cargo bench --no-run`.
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "auth_bench"
harness = false

[[bench]]
name = "sd_jwt_bench"
harness = false

[[bench]]
name = "json_bench"
harness = false

[[bin]]
name = "registry-notary-cel-worker"
path = "src/bin/registry_notary_cel_worker.rs"
required-features = ["registry-notary-cel"]
test = false

[[bin]]
name = "registry-notary-cel-worker-fixture"
path = "src/bin/registry_notary_cel_worker_fixture.rs"
required-features = ["cel-worker-fixture"]
test = false
