[package]
name = "registry-notary-source-adapter-rhai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sandboxed Rhai scripting engine for governed source adapters."
readme = "README.md"
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
# The workspace declares crosswalk-functions with its default features (text,
# email, ids, json, ...). This crate additionally needs `date` and `redaction`,
# enabled additively here.
crosswalk-functions = { workspace = true, features = ["date", "redaction"] }
rhai.workspace = true
serde.workspace = true
serde_json.workspace = true
# The workspace `tokio` already enables rt-multi-thread/macros/time/sync; this
# crate only needs that subset. Listed explicitly so the bridge's needs are
# self-documenting without changing the workspace default.
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
