[package]
name = "registry-notary-worker-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Registry Notary hardened JSON-line worker process pool."
readme = "README.md"
repository.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "process"] }
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }

[[bin]]
name = "registry-notary-worker-harness-fixture"
path = "src/bin/worker_harness_fixture.rs"
test = false
