[package]
name = "registry-platform-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
ulid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = { version = "3" }
