[package]
name = "registry-platform-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
tokio.workspace = true
