[package]
name = "registry-platform-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Signed/governed runtime configuration verification contracts for Registry services."
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
base64.workspace = true
registry-platform-crypto = { workspace = true }
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
tempfile.workspace = true
