[package]
name = "registry-platform-consent"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
base64.workspace = true
registry-platform-crypto = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zeroize.workspace = true
