[package]
name = "registry-platform-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
hmac.workspace = true
p256.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
url.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio.workspace = true
