[package]
name = "registry-platform-httpsec"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
publish = false

[dependencies]
axum.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tower.workspace = true
tower-http.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
