[package]
name = "registry-platform-httputil"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
bytes.workspace = true
http.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
axum.workspace = true
proptest.workspace = true
