[package]
name = "registry-platform-httputil"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
base64.workspace = true
bytes.workspace = true
hickory-resolver.workspace = true
http.workspace = true
ipnet.workspace = true
registry-platform-canonical-json.workspace = true
registry-platform-crypto.workspace = true
reqwest.workspace = true
rustls-native-certs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
axum.workspace = true
proptest.workspace = true
rcgen.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tokio-rustls.workspace = true
