[package]
name = "registry-platform-oid4vci"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
publish = false

[dependencies]
base64.workspace = true
registry-platform-crypto = { workspace = true }
registry-platform-replay = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
serde_urlencoded = "0.7"
tokio.workspace = true
