[package]
name = "registry-platform-ops"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
publish = false

[dependencies]
fs2.workspace = true
registry-platform-crypto = { workspace = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
jsonschema = { version = "0.46.5", default-features = false }
tempfile.workspace = true
