[package]
name = "registry-relay"
version.workspace = true
edition = "2021"
rust-version = "1.95"
license = "Apache-2.0"
description = "Registry Relay: config-driven, read-only APIs over sensitive registry and tabular files."
publish = false

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]

[features]
# The 1.0 default build keeps the beta attribute-release surface out of the
# shipped API. Opt in with `--features attribute-release` to compile the
# CEL-backed adapter, routes, config surface, and observability buckets.
default = []
attribute-release = ["crosswalk-runtime"]
crosswalk-runtime = ["dep:crosswalk-core"]
standards-cel-mapping = ["crosswalk-runtime"]
spdci-api-standards = ["dep:jsonschema"]
ogcapi-features = ["dep:ogcapi-types", "dep:geojson"]
ogcapi-edr = ["dep:geo", "dep:geo-types", "dep:geojson", "dep:wkt"]
ogcapi-records = []

# ─── runtime ─────────────────────────────────────────────────────────────────
[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "signal",
    "fs",
    "net",
    "macros",
    "process",
    "io-util",
    "sync",
    "time",
] }
axum = { version = "0.8" }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
tower = { version = "0.5" }
tower-http = { version = "0.7", features = [
    "trace",
    "request-id",
    "cors",
    "timeout",
    "set-header",
] }

# ─── data ────────────────────────────────────────────────────────────────────
# datafusion minor is pinned because bumping means re-typing the Source
# trait's RecordBatch return across multiple modules.
# Current pin: 53.1.
datafusion = { version = "53.1" }
calamine = { version = "0.35" }
csv = { version = "1" }
tokio-postgres = { version = "0.7.18", features = ["with-time-0_3"] }
postgres-native-tls = { version = "0.5" }
native-tls = { version = "0.2" }
# Used by Source/Format trait surfaces (BoxStream); also a transitive
# of datafusion but pinned here so the public surface compiles without
# relying on a re-export path.
futures = { version = "0.3" }
bytes = { version = "1" }
# Atomic state swap for IngestPlan readiness (single-writer, many-reader).
arc-swap = { version = "1" }
# Implements DataFusion's async TableProvider delegation for atomic swaps.
async-trait = { version = "0.1" }
# CancellationToken for refresh-loop shutdown.
tokio-util = { version = "0.7" }

# ─── serialization / config ──────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
rhai.workspace = true
crosswalk-functions = { workspace = true, features = ["date", "redaction"] }
# Optional Crosswalk CEL mapping support. Disabled by default so the core VC
# path does not pull in the mapping dependency graph.
crosswalk-core = { workspace = true, optional = true }
jsonschema = { version = "0.18", optional = true }
# Pure Rust YAML parser used instead of the previous unmaintained YAML stack.
serde-saphyr = { version = "0.0.26" }
humantime-serde = { version = "1" }
registry-manifest-core = { workspace = true }

# ─── auth / crypto ───────────────────────────────────────────────────────────
registry-platform-authcommon = { workspace = true }
registry-platform-audit = { workspace = true }
registry-platform-crypto = { workspace = true }
registry-platform-httpsec = { workspace = true }
registry-platform-httputil = { workspace = true }
registry-platform-oidc = { workspace = true }
registry-platform-config = { workspace = true }
registry-config-report = { workspace = true }
registry-platform-pdp = { workspace = true }
getrandom = { version = "0.4" }
hmac = { version = "0.13" }
sha2 = { version = "0.11" }
subtle = { version = "2" }
zeroize = { version = "1" }
# JWS validation primitives used by OIDC/JWKS authentication.
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
# base64url encoding used by API key and OIDC helpers.
base64 = { version = "0.22" }
# Used by the OIDC auth provider to fetch JWKS documents and resolve
# `.well-known/openid-configuration`. native-tls keeps the TLS stack
# consistent with the postgres-native-tls path already in this binary.
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# ─── time / ids ──────────────────────────────────────────────────────────────
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
ulid = { version = "1" }

# ─── observability ───────────────────────────────────────────────────────────
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
registry-platform-ops = { workspace = true }

# ─── errors ──────────────────────────────────────────────────────────────────
thiserror = { version = "2" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", default-features = false, features = ["process", "resource"] }
rustix.workspace = true

# ─── openapi ─────────────────────────────────────────────────────────────────
ogcapi-types = { version = "0.3.0", optional = true, features = ["features"] }
geojson = { version = "1.0", optional = true, features = ["geo-types"] }
geo = { version = "0.33", optional = true }
geo-types = { version = "0.7", optional = true }
wkt = { version = "0.14", optional = true, features = ["geo-types"] }

# ─── dev / test ──────────────────────────────────────────────────────────────
[dev-dependencies]
aws-lc-rs = { version = "1" }
axum-test = { version = "20" }
assert-json-diff = { version = "2" }
chrono = { version = "0.4" }
registry-notary-core.workspace = true
registry-notary-server.workspace = true
registry-platform-testing = { workspace = true, features = ["test-utils"] }
proptest = { version = "1" }
rcgen.workspace = true
serde_norway.workspace = true
tempfile = { version = "3" }
insta = { version = "1", features = ["json"] }
# Used only by format_xlsx tests to construct a synthetic XLSX (a ZIP)
# whose `<dimension>` element advertises a cell count over the cap. The
# package version matches the one calamine 0.35 pulls transitively so we
# don't multiply build-time copies.
zip = { version = "8", default-features = false, features = ["deflate"] }
# Validates payloads in standards-adapter tests.
jsonschema = { version = "0.18" }
# Ed25519 key generation for tests so they can mint fresh keypairs and
# convert them to/from JWK without shelling out to openssl.
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
# rand for ed25519-dalek key generation in tests.
rand_core = { version = "0.6", features = ["std"] }
# Parses `resources/MANIFEST.toml` in the resource pinning test.
toml = { version = "1.1" }
wiremock = { version = "0.6" }
# Criterion drives the microbenchmarks under `benches/`. The benches are
# manually invoked via `cargo bench`; CI only smoke-checks `cargo bench --no-run`.
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "auth_bench"
harness = false

[[bench]]
name = "etag_bench"
harness = false

[[bench]]
name = "registry_bench"
harness = false

[[bench]]
name = "query_bench"
harness = false

[[bench]]
name = "json_bench"
harness = false

[[bench]]
name = "audit_bench"
harness = false
