[package]
name = "registryctl"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
ed25519-dalek = "2"
getrandom = "0.4"
registry-config-report = { workspace = true }
registry-platform-authcommon = { workspace = true }
registry-platform-config = { workspace = true }
registry-platform-crypto = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
time = { workspace = true }
ureq = "2"
url = "2"

[dev-dependencies]
registry-notary-core.workspace = true
jsonschema = { workspace = true }
tempfile = "3"
