[package]
name = "registryctl"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[features]
default = []
relay-contract-test-support = ["registry-notary-server/relay-contract-test-support"]

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
ed25519-dalek.workspace = true
getrandom = "0.4"
hex.workspace = true
include_dir = "0.7"
ipnet.workspace = true
rcgen.workspace = true
registry-config-report = { workspace = true }
registry-language-server.workspace = true
registry-notary-core.workspace = true
registry-notary-server = { workspace = true, features = ["registry-notary-cel"] }
registry-platform-authcommon = { workspace = true }
registry-platform-config = { workspace = true }
registry-platform-crypto = { workspace = true }
registry-relay = { workspace = true, features = ["attribute-release", "ogcapi-features", "spdci-api-standards"] }
regex = "1"
rustix.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway.workspace = true
sha2.workspace = true
tempfile = "3"
time = { workspace = true }
tokio = { workspace = true, features = ["io-util", "process"] }
ureq = "3"
url = "2"
zeroize.workspace = true

[dev-dependencies]
jsonschema = { workspace = true }
